# GA-physics

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindC3GA.cmake
cmake/: FindC3GA2.cmake  FindE3GA.cmake  FindEigen.cmake  FindGLM.cmake
docs/html/: amd__code__t_8h_source.html  asm-bits_8h_source.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_7475cc4a37f078345c5899e8811bc83b.html  dir_88f6ce3c48db861cd0c0cbd483090011.html  dir_9da058e51c07224610462744ac3b1dee.html  files.html  intel__code__t_8h_source.html  libcpuid_8h.html  libcpuid_8h_source.html  libcpuid__constants_8h_source.html  libcpuid__internal_8h_source.html  libcpuid__types_8h_source.html  libcpuid__util_8h_source.html  rdtsc_8h_source.html  recog__amd_8h_source.html  recog__intel_8h_source.html  structcpu__epc__t.html  structcpu__id__t.html  structcpu__list__t.html  structcpu__mark__t.html  structcpu__raw__data__t.html  structcpu__sgx__t.html  structfeature__map__t.html  structinternal__id__info__t.html  structmatch__entry__t.html
docs/latex/: files.tex  libcpuid_8h.tex  structcpu__epc__t.tex  structcpu__id__t.tex  structcpu__list__t.tex  structcpu__mark__t.tex  structcpu__raw__data__t.tex  structcpu__sgx__t.tex  structfeature__map__t.tex  structinternal__id__info__t.tex  structmatch__entry__t.tex
docs/man/man3/: libcpuid.h.3
include/app/: Config.hpp  Engine.hpp  Versor.hpp
include/app/object/: Arena.hpp  ObjectC3GA.hpp  ObjectVertex.hpp  Projectile.hpp  Sphere.hpp  Square.hpp  Triangle.hpp  Wall.hpp
include/object/: ObjectVertex.hpp  Panel.hpp  Sphere.hpp  Wall.hpp
include/shader/: Cubemap.hpp  Shader.hpp  ShaderCubemap.hpp  ShaderTexture.hpp  Texture.hpp
include/shader/uniform/: IUniform.hpp  Uniform1fv.hpp  Uniform1iv.hpp  Uniform1uiv.hpp  Uniform2fv.hpp  Uniform2iv.hpp  Uniform2uiv.hpp  Uniform3fv.hpp  Uniform3iv.hpp  Uniform3uiv.hpp  Uniform4fv.hpp  Uniform4iv.hpp  Uniform4uiv.hpp  UniformMatrix2fv.hpp  UniformMatrix2x3fv.hpp  UniformMatrix2x4fv.hpp  UniformMatrix3fv.hpp  UniformMatrix3x2fv.hpp  UniformMatrix3x4fv.hpp  UniformMatrix4fv.hpp  UniformMatrix4x2fv.hpp  UniformMatrix4x3fv.hpp  uniform_all.hpp
include/tool/: Camera.hpp  Input.hpp  Rendered.hpp
include/transformation/: Dilator.hpp  Motor.hpp  Rotor.hpp  Translator.hpp  Versor.hpp
include/util/: FileReader.hpp  INonCopyable.hpp  Image.hpp
libs/c3ga/: CMakeLists.txt  README.md  cheatSheet.txt
libs/c3ga/src/c3ga/: PythonBindings.cpp  Utility.hpp
libs/imgui/src/imgui/: imgui_impl_sdl.cpp
libs/include/c3ga/: Mvec.hpp  Outer.hpp  Tools.hpp
libs/include/c3ga2/: BasisTransformations.hpp  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  Inner.hpp  InnerExplicit.hpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  Utility.hpp
libs/include/e3ga/: Mvec.hpp  Outer.hpp
libs/include/lodepng/: lodepng.hpp
libs/libcpuid/libcpuid/: CMakeLists.txt
shader/: default.fs.glsl
src/: main.cpp
src/app/: Config.cpp  Engine.cpp
src/app/object/: Arena.cpp  ObjectVertex.cpp  Projectile.cpp  Sphere.cpp  Square.cpp  Triangle.cpp  Wall.cpp
src/geometry/: ObjectVertex.cpp  Panel.cpp  Sphere.cpp  Wall.cpp
src/shader/: Cubemap.cpp  Shader.cpp  ShaderCubemap.cpp  ShaderTexture.cpp  Texture.cpp
src/shader/uniform/: IUniform.cpp  Uniform1fv.cpp  Uniform1iv.cpp  Uniform1uiv.cpp  Uniform2fv.cpp  Uniform2iv.cpp  Uniform2uiv.cpp  Uniform3fv.cpp  Uniform3iv.cpp  Uniform3uiv.cpp  Uniform4fv.cpp  Uniform4iv.cpp  Uniform4uiv.cpp  UniformMatrix2fv.cpp  UniformMatrix2x3fv.cpp  UniformMatrix2x4fv.cpp  UniformMatrix3fv.cpp  UniformMatrix3x2fv.cpp  UniformMatrix3x4fv.cpp  UniformMatrix4fv.cpp  UniformMatrix4x2fv.cpp  UniformMatrix4x3fv.cpp
src/tool/: Camera.cpp  ImGuiHandler.cpp  Input.cpp
src/transformation/: Dilator.cpp  Motor.cpp  Rotor.cpp  Translator.cpp  Versor.cpp
src/util/: FileReader.cpp  Image.cpp
